Fix overlapping header text on works.html on mobile

--- a/style.css
+++ b/style.css
@@ -672,8 +672,8 @@ h2.ambition-text {
     display: block !important;
     bottom: 0 !important;
   }
-  .block-text-massive.pt-small {
-    padding-top: 10vh !important;
+  .block-text-massive, .block-text-massive.pt-small {
+    padding-top: 15vh !important;
   }
   .label-muted {
     margin-bottom: 20px !important;
